--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -37,7 +37,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769668.md#1">14名区议员及公民党议员拒出席张建宗见面会</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769395.md#1">港上水游行 数十市民遭围捕 记者遭殴及推撞</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11768878.md#1">川普在几个月内除掉多名世界级恐怖分子</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769417.md#1">因应武汉肺炎? 香港启动“严重应变级别”</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769417.md#1">因应武汉肺炎 香港启动“严重应变级别”</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769312.md#1">川普警告伊朗：美军世界最强 或启用新武器</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769044.md#1">武汉不明肺炎快速蔓延 香港再增6宗病例</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767754.md#1">廖天琪：谈论中国人权回避法轮功 这是耻辱</a><br>
