--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11770066.md#1">三正部级高官被批“两面人” 他们干了啥？</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769876.md#1">武汉疫情病增至59例 密切接触者163名</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11768620.md#1">【翻墙必看】恐怖组织头子被击毙细节曝光</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769646.md#1">香港怀疑武汉肺炎案至16例 最小病人2岁</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769312.md#1">川普警告伊朗：美军世界最强 或启用新武器</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769044.md#1">武汉不明肺炎快速蔓延 香港再增6宗病例</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767754.md#1">廖天琪：谈论中国人权回避法轮功 这是耻辱</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11768666.md#1">伊朗将军被击毙细节：最后36小时露行踪</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11770034.md#1">电梯失灵 贵阳女抱1岁娃从27楼直降负1楼</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769940.md#1">柬埔寨施工饭店倒塌 至少36死23伤</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11738876.md#1">被打残 辽宁法轮功学员李亚君再遭迫害</a><br>
