--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -10,7 +10,6 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank">疫情扩大 哈尔滨再有13名学生感染布病</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/06/806120829481093-150x120.jpg" align ="left"></a>中国农科院兰州兽医研究所11月下旬爆发布鲁氏菌病（布病），并导致至少96人被感染后，同属中国农科院的哈尔滨兽医研究所再有13名学生感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank">侵大陆并定殖 草地贪夜蛾明年恐进暴发阶段</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-954036218-150x120.jpg" align ="left"></a>中共农业农村部称，草地贪夜蛾今年入侵大陆并定殖，明年恐进入爆发阶段，春季向长江流域迁飞的时间会比2019年提前1个月左右，造成的危害预计会比2019年更大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 7:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/9/n11711410.md#1" target="_blank">阴霾袭华北黄淮 北京等55城发重污染预警</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/9/n11711410.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111262611086-150x120.jpg" align ="left"></a>阴霾大面积持续多日笼罩大陆华北、黄淮、江汉等地区，截至12月9日，有55个城市启动重污染天气预警。其中，北京市达“5级重度污染”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11734233.md#1" target="_blank">四川内江再发生3.3级地震</a><br></h3>12月20日，中国地震台网正式测定，20日8时52分，四川内江市威远县（北纬29.50度，东经104.54度）发生3.3级地震，震源深度13千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 10:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11731701.md#1" target="_blank">四川再发地震 今年至少14次地震</a><br></h3>继12月18日四川内江5.2发生地震后，19日凌晨，四川绵阳再发3级地震，震源深度10千米。今年四川频发地震，加上今次，发生至少14次地震，还有部分余震未算入。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729434.md#1" target="_blank">四川内江5.2级地震 18人受伤8千户停电</a><br></h3>12月18日早上，四川内江市资中县发生5.2级地震。截至下午2时许，官方称，地震造成18人受伤，其中5人重伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729550.md#1" target="_blank">贵州煤矿事故致16死 四川渗水事故致5死</a><br></h3>12月18日，贵州安龙县广隆煤矿瓦斯爆炸搜救工作结束。此次事故，导致16名矿工死亡。而稍早前的四川煤矿渗水事故搜救工作也基本结束，5人死亡，13人获救。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:15 PM							</td></tr>
@@ -35,5 +34,6 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11712523.md#1" target="_blank">安徽六安高速路接连发生车祸 共致6死10伤</a><br></h3>12月10日、7日，安徽六安段高速路均发生交通事故，共造成6人死亡，10人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11712260.md#1" target="_blank">阴霾天大陆多地航班延误 通行能力降50％</a><br></h3>12月10日，大陆多地部分机场因阴霾天气影响，能见度低，出现大面积延误情况，包括乌鲁木齐地窝堡机场、济南遥墙机场、青岛流亭机场、石家庄正定机场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/9/n11710988.md#1" target="_blank">四川绵阳4.6级地震 成都德阳震感强烈</a><br></h3>四川省绵阳市安州区9日下午发生4.6级地震。地震发生后，大量网民发帖表示有震感，“成都震感强烈”、“西科大（绵阳西南科技大学）震感强烈”“德阳震感强烈”！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/8/n11708036.md#1" target="_blank">京津冀多地持续阴霾天 航班高速路均受影响</a><br></h3>12月8日，河北南部、北京东南部、河南中东部、山东西北部等地的部分地区因重度阴霾影响，多处高速路段封闭，机场航班也被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/ncid280_3.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/ncid280_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_3.htm">http://www.epochtimes.com/gb/ncid280_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
