--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -26,13 +26,10 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756021.md#1" target="_blank">周晓辉：中美高层学习内容亦决定角力结果</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756021.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Donald-Trump-Is-Sworn-In-As-45th-President-Of-The-United-States-GettyImages-632197478-600x400-150x120.jpg" align ="left"></a>一个是站在反神的马列共产邪说一边的中共，一个是坚定追随神、聆听神的教诲的川普政府，双方在贸易等多方面的角力，孰胜孰负早已定下，而“因着上帝的恩典，美国最好的日子将会来到”，“这个国家的人民也因此有福了。”至于中共，将在天谴中灰飞烟灭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756134.md#1" target="_blank">谢燕益：杨胜军被非法拘禁致死案之紧急报案举报控告函</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/XIEYANYI-600x400-150x120.jpg" align ="left"></a>本代理人通过了解相关案情以及对相关法律进行分析，认为佳木斯市公安局、佳木斯市公安局郊区分局、佳木斯市拘留所对受害人杨胜军仅仅因其信仰法轮功就采取拘留措施属于非法拘禁的性质，并且这一非法拘禁行为的发生直接导致受害人杨胜军人身亡故的严重后果，人命关天！该案的发生是有关部门基于对法律的错误认识造成的一场冤假错案，并且由于相关.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 3:33 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11755947.md#1" target="_blank">颜丹：教育经济挤水分 中共忙找替罪羊</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11755947.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1411050005272663-600x400-150x120.jpg" align ="left"></a>但中共心知肚明，它永远不可能从根本上来解决问题。因为它才是中国社会虚假泛滥、乱象频现的根源。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:25 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761144.md#1" target="_blank">王赫：习近平命运之择与三句古语</a><br></h3>又是一月一日。习近平的新年贺词，虽努力想有点个性，却依然是篇不敢直面现实的陈词滥调。古云：一元复始，万象更新。被党文化笼罩着的习，亟需找到“元”。找到“元”，自然“等闲识得东风面，万紫千红总是春”；找不到“元”，那就“望眼总为浮云遮”， 难免“身死人手，为天下笑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749214.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（12）</a><br></h3>信息这个概念极大地简化了这个问题的讨论。对于一个基于近代科学的认知体系，有一个最基本的前提：认识者与被认识者之间要有信息的传递。在这个前提下的认知域主要受到三方面的限制：个体人接受信息，个体人对收到信息的处理，个体人之间信息的交换。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 6:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758833.md#1" target="_blank">金言：2019年末 武汉再现惊魂噩梦</a><br></h3>2019年最后一天，关于“武汉SARS”，“武汉非典”，“武汉不明原因肺炎”的恐怖消息在网上炸开了锅，传得沸沸扬扬，人心惶惶。今年以来，中国大陆中部大都市武汉的确极其不平静，暴雨、干旱、流感、地震和不明肺炎等等天灾人祸接连不断来袭，还有在武汉军运会期间，习近平险遭暗杀的消息也不胫而走……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 4:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756476.md#1" target="_blank">谭笑飞：2020，中共向地狱裸奔</a><br></h3>圣诞前夕，一名英国小女孩在产自中国的圣诞卡中发现了上海囚犯的求救信，中共外交部发言人耿爽宣称这是记者“编造的闹剧”。这令笔者联想到了加拿大人权律师大卫·麦塔斯先生的一句话。麦塔斯先生和大卫·乔高先生的独立调查取得的一条完整的证据链证实，中共一直在大规模活摘法轮功学员的器官。调查报告发布之后，中共也拼凑了一个所谓的调查报.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 10:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754518.md#1" target="_blank">李小刚：量子共振检测与中共的脑控武器</a><br></h3>目前，量子医学的研究已经取得了很大的进展，量子共振检测仪也被应用在精神疾病的诊断以及其他领域，那么量子共振检测仪的诊断原理是什么，下面对其原理作以简要介绍，以下介绍量子共振检测仪原理的内容是对网络资源加以整合后的结果，以求尽可能全面地、言简意赅地揭示量子共振检测仪的原理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 3:12 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754469.md#1" target="_blank">祝君安：魔共百变亦是魔</a><br></h3>文革腥风刮六四，活摘魔爪伸维族；
-吸干膏脂养妖兽，更渗全球蜇虺毒；
-红梦到醒梁来熟，党奴自干仍割韭；
-爱心莫向党媚柔，百分之五随时候。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 2:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
