--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -18,6 +18,12 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749651.md#1" target="_blank">【2019盘点】中共社会监控的极端化</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/04/1204080852102039-150x120.jpg" align ="left"></a>2019，中共是火上烤的一年，被烤得神志不清、惊慌失措、奄奄一息，政局全面恶化；草木皆兵，“向左转”浊浪拍岸，社会控制极端化；当局左支右绌，进退失措，几近丧失决策能力；强化“党领导一切”，刀光剑影之间，内斗呈现新态势，已末路不远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749390.md#1" target="_blank">东方觉：辛苦农民工 讨薪路上难</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1512260414022120-150x120.jpg" align ="left"></a>每每时近岁末，年关将至，中国大陆农民工讨薪难的问题成为公众关注的焦点。一份薪水，背后是一个家庭的生活来源和希望。长期远离家乡的农民工，回家和父母妻儿团聚的念头尤为迫切，农民工的“血汗钱”也牵动了不少人的心。讨薪路漫漫，难于上青天；漫漫讨薪路，几多辛酸泪。农民工的辛苦遭遇和为讨薪付出的沉重代价，令人心痛，也令人心酸。
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:44 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754195.md#1" target="_blank">郑纯清：二零二零年散伙演弃年——新年寄语</a><br></h3>二零二零年，散伙演弃年。
+神韵火朝天，天象愈明显。
+进化论坛塌，无神论场陷。
+唯物论口呆，斗争党自残。
+除魔救善戏，假恶暴伙散。
+百年红潮零，中南海底翻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754159.md#1" target="_blank">千瑞：望中原</a><br></h3>教书不育人，作祟更欺人。课下单开灶，搂钱不做人。
 学习吹强国，人人写心得。三篇四五篇，费尽胡编墨。
 白衣常吃人，验血吃何人。堪比妖魔恶，挥刀可杀人。
@@ -65,6 +71,5 @@
 没有港独党来扮
 坏事做绝背里干
 台上装傻又装蒜......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/21/n11737584.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（11）</a><br></h3>近代科学的很多数学科都是从两个个体间的相互作用开始的。如牛顿力学第一定律，经济学的供给方与需求方，制度经济学中的规制与被规制等。但是在这些科学中，作用模型都是不同，并未发展出两个个体相互作用的一般模型。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 6:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
