--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -20,7 +20,9 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11762141.md#1" target="_blank">袁斌：中共恐惧的“规模性失业潮”正扑面而来</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11762141.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/dfed3f93b4d5b2bfcee7e588808f345c-150x120.jpg" align ="left"></a>2019年12月10日至12日，被官媒称为“定调2020年经济工作”的中共经济工作会议在北京举行。如同去年底的中共经济工作会议一样，这次会议继续强调“六稳”，即稳就业、稳金融、稳外贸、稳外资、稳投资、稳预期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11761548.md#1" target="_blank">可心：中共侵蚀联合国人权事务的四大手段</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11761548.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/UN_Members_Flags2-600x400-150x120.jpg" align ="left"></a>不久前，联合国雇员EmmaReilly向媒体爆料称瑞士联合国人权办公室继续向中共提供批评其政权的人权活动人士名单和信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11761018.md#1" target="_blank">王友群：解体中共 万象更新</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11761018.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1409201624582403-600x400-150x120.jpg" align ="left"></a>2020年的新年钟声已经敲响。14亿炎黄子孙，经历了2019年的压迫、抗争、觉醒之后，步入了一元复始的崭新一年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:50 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11764911.md#1" target="_blank">【名家专栏】浅析十年来美国主要经济论点</a><br></h3>本月初，华盛顿智库布鲁金斯学院（Brookings Institution）询问了10位学者，“过去十年，经济学界的重大理论是什么？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 12:15 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11761751.md#1" target="_blank">戈壁东：台独是个假命题，宣称与中共统一的是卖台贼</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11761751.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e5c581354374d7_ttl7dayuPu_20200101-____-DJY-600x400-1-150x120.jpg" align ="left"></a>台独是个假命题。1949年以后台湾一直是名为中华民国的独立国家。现在台湾闹的所谓台独，无非想改个国名而已。中共国和中华民国本来就不是一个国家，唯一存在的是地域争议，中华民国认为大陆是被外国代理人入侵了，必须收复；而靠外来势力和谎言占领大陆的匪帮政权，只想要消灭民主中国的最后据点。台独只是由此出的假命题。
+
+中共攻击.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11766848.md#1" target="_blank">唐风：温哥华中学生课堂讲香港被踢下体之思考</a><br></h3>日前，在加拿大温哥华地区的列治文市中学因课堂讲香港游行真相，后即遭群殴踢下体事件，引起华人社区的广泛关注。事情发生在12月2日，可是很多本地人并不知晓或只知道一些从某个媒体看到的被轻描淡写了事件。所以没有引起更多的讨论和后期跟进关注。直到一些华裔移民到市政府、教育局上访，并递交了呼吁罢免校长的联署书后，此事即在加拿大的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 9:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766398.md#1" target="_blank">杨宁：公安内部现惨案 官员自相残杀难休止</a><br></h3>生活在如此政治氛围下的中共各级官员，内心应该都充满了恐惧，因为不知道自己哪一天也会成为枪下之鬼。这也是越来越多的官员从体制内辞职，或者外逃、转移资金并将亲属安排在国外的原因，也是诸多中共高层在海外寻找退路的缘由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11765043.md#1" target="_blank">85岁美籍台侨：阻碍两岸统一的是共产制度</a><br></h3>有人问我：“你愿意台湾与大陆统一，还是愿意台湾独立？”我对突如其来的问题没有作答。但稍加思考后，我问对方：“你愿意看到天安门大屠杀的悲剧也在台湾街头重演吗？”对方在问我：“那么你是赞成台湾独立吗？”我说：“如果你宣布台湾独立， 那不赞成台湾独立的人起来造反，你怎么办？”对方又说：“那你既不赞成台湾统一，也不赞成独立，那.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 3:17 PM			</td></tr>
