--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11747186.md#1" target="_blank">香港黄店排长队吃免费大餐 力撑理大厨房佬</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11747186.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191226055742100484-150x120.jpg" align ="left"></a>光荣冰室与理大保卫战中做饭的厨房佬合作推出25日晚圣诞大餐，尽管厨房佬圣诞之夜被捕，但前来支持这项活动的人排长队，他们表示无论厨房佬在哪里，但心跟他们在一起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11747263.md#1" target="_blank">“痛风酒”老板大谈长寿之道 突然猝死台上</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11747263.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-18-150x120.jpg" align ="left"></a>近日中国微博上流传一段影片，一名老板在台上演讲谈长寿之道，却突然猝死在舞台上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 11:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11746884.md#1" target="_blank">3分钟看完反渗透法 台立委：只罚5种行为</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11746884.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/401dadd023b35720ef54c2b3e861e34d-150x120.jpg" align ="left"></a>立法院31日将处理“反渗透法”草案，民进党立法院党团26日召开记者会表示，反渗透法总共只有12条条文、926个字，“只要3分钟就能读完”，规范内容与前提条件很严格，只有在接受境外敌对势力请托进行“捐钱、竞选、公投、游说与扰乱集会游行”等5种行为时，才有可能触法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 10:11 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/25/n11745421.md#1" target="_blank">X射线机辐射超标 重庆一医院十多名职工患癌</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/25/n11745421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-175051588-150x120.jpg" align ="left"></a>重庆市沙坪坝区中医院有17名职工患癌。其中一台移动X射线机辐射疑超标8000倍。一患癌医生怀疑，医院癌症高发生率与电离辐射泄漏有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 10:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/31/n11756555.md#1" target="_blank">山西一在建隧道坍塌 5人死亡1人被困</a><br></h3>12月30日，山西晋城市一施工隧道发生断面塌方，塌方量约200立方米。有6人被困，截止今（31日）早9时11分，证实有5人死亡，1人受困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11754591.md#1" target="_blank">每日三退声明精选（2019/12/29）</a><br></h3>太坑人了，家被拆，无处申冤！为了生活选择工作还被抓进监狱，没有房可住，微薄的退休金还是最低的双轨制，都不敢得病，怕死不起！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 3:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752699.md#1" target="_blank">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br></h3>北京市朝阳区民航总医院女医生杨文24日遭病人家属孙文斌用刀割喉死亡。陆媒近日披露其被杀的细节：孙用刀刺中她颈部后，再多次“拉锯式”切割，将她的颈部肌肉及气管锯断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 6:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752654.md#1" target="_blank">长沙动物园发生大象踩人事故 一驯兽员身亡</a><br></h3>12月24日下午1点20分许，湖南长沙生态动物园大象驯养场内，一头大象突然发狂，将一名驯兽员卜某踩死。动物园目前已将该大象隔离，有动物专家怀疑大象是发情所致。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:33 PM							</td></tr>
